tetrate/tis1401/e2e/rbac.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:gateway:full-access
  labels:
    rbac.kyverno.io/aggregate-to-admission-controller: "true"
rules:
- apiGroups:
  - gateway.networking.k8s.io
  resources:
  - gateways
  verbs:
  - get
  - list
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: kyverno-gateway-binding
  namespace: kyverno
subjects:
- kind: ServiceAccount
  name: kyverno-sa
  namespace: kyverno
roleRef:
  kind: ClusterRole
  name: kyverno:gateway:full-access
  apiGroup: rbac.authorization.k8s.io
